--- a/packages/cyberstorm/src/components/CommunityCard/CommunityCard.module.css
+++ b/packages/cyberstorm/src/components/CommunityCard/CommunityCard.module.css
@@ -29,11 +29,15 @@
 }
 
 .title {
+  max-height: calc(var(--font-size--l) + var(--space--12));
   padding-top: var(--space--12);
+  overflow: hidden;
   color: var(--color-text--default);
   font-weight: 700;
   font-size: var(--font-size--l);
-  line-height: normal;
+  line-height: 1;
+  white-space: nowrap;
+  text-overflow: ellipsis;
 }
 
 .metaItemList {
