--- a/packages/cyberstorm/src/components/Layout/CommunityListLayout/CommunityListLayout.module.css
+++ b/packages/cyberstorm/src/components/Layout/CommunityListLayout/CommunityListLayout.module.css
@@ -11,12 +11,23 @@
 
 .filters {
   display: flex;
-  flex-direction: row;
-  justify-content: space-between;
+  flex-direction: column;
+  gap: var(--gap--16);
 }
 
 .searchTextInput {
-  flex: 1 0 auto;
+  width: 100%;
+}
+
+@media (min-width: 40rem) {
+  .searchTextInput {
+    width: 50%;
+  }
+
+  .filters {
+    flex-direction: row;
+    justify-content: space-between;
+  }
 }
 
 .searchFilters {
@@ -25,6 +36,7 @@
   gap: var(--gap--16);
   align-content: center;
   justify-content: flex-end;
+  min-height: 3rem;
 }
 
 .searchFiltersSortLabel {
@@ -36,6 +48,6 @@
 .communityCardList {
   display: grid;
   flex-flow: row wrap;
-  grid-template-columns: repeat(auto-fit, minmax(12rem, 1fr));
+  grid-template-columns: repeat(auto-fill, minmax(12rem, 1fr));
   gap: 3rem 1.5rem;
 }
